--- a/package.json
+++ b/package.json
@@ -6,14 +6,9 @@
   "author": "Jake Harding <jacob.s.harding@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/twbs/grunt-sed.git"
+    "url": "git+https://github.com/twbs/grunt-sed.git"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/jharding/grunt-sed/blob/master/LICENSE-MIT"
-    }
-  ],
+  "license": "MIT",
   "engines": {
     "node": ">=0.10.0"
   },
