--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
+sudo: false
 language: node_js
 node_js:
   - "0.10"
   - "0.12"
   - "4"
+  - "5"
 before_script:
   - npm install -g grunt-cli
+matrix:
+  fast_finish: true
