--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "lodash": "~3.10.1",
+    "lodash": "~4.5.0",
     "replace": "~0.3.0"
   },
   "peerDependencies": {
-    "grunt": "~0.4"
+    "grunt": ">=0.4.5"
   },
   "devDependencies": {
     "grunt": "~0.4",
-    "grunt-contrib-jshint": "~0.11",
+    "grunt-contrib-jshint": "~1.0",
     "grunt-exec": "~0.4.6"
   },
   "keywords": [
